# ReviewBuddy

./: .gitignore  README.md  pyproject.toml  run_flat.py
experiments/: __init__.py  augment_reviews.py  cost_tracker.py  dataset.py  dspy_rlm_extraction.py  first_experiment.py  new_workflow.py  official_process.py  preview.py  priprava.py  priprava_fix.py  reduce_scores.py  review_process2.py  rlm_process.py  rlm_process2.py  rlm_process3.py  supplement_scores.py
reviewbuddy/: __init__.py  extraction.py  metrics.py  pipeline.py  prompts.py  rubric_iclr.txt
